--- a/src/styles/base/globals/_globals.scss
+++ b/src/styles/base/globals/_globals.scss
@@ -12,6 +12,7 @@ $font-size-4xl: 32px;
 $font-size-4xxl: 36px;
 $font-size-5xl: 40px;
 $font-size-6xl: 48px;
+$font-size-6xxl: 54px;
 $font-size-7xl: 56px;
 $font-size-8xl: 64px;
 $font-size-9xl: 72px;
