--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -297,7 +297,7 @@
 
 @mixin sidebar {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   max-width: 265px;
   border-radius: 24px;
   background: color.$color-white-primary;
@@ -345,4 +345,22 @@
   line-height: $lineHeight;
   color: $color;
   opacity: $opacity;
+}
+
+@mixin tasksHeading($height: $height) {
+  width: 100%;
+  height: $height;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 14px;
+  background: color.$color-gray-light;
+  font-weight: 700;
+  color: color.$color-black-deep;
+}
+
+@mixin tasksBoardHeading {
+  font-weight: 700;
+  color: color.$color-black-deep;
+  font-size: size.$font-size-lg;
 }
