Created EventModal for nearest page , fixed styles , added new mixins and etc.

--- a/src/components/projects/ProjectsBoardTasks/ProjectsBoardTasks.module.scss
+++ b/src/components/projects/ProjectsBoardTasks/ProjectsBoardTasks.module.scss
@@ -4,6 +4,13 @@
 
 .projectsBoardTasks {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 20px;
+  &Heading {
+    @include tasksHeading(40px);
+  }
 }
 
 .boardTasksItems {
