--- a/src/components/home/HomeModal/HomeModal.module.scss
+++ b/src/components/home/HomeModal/HomeModal.module.scss
@@ -30,20 +30,7 @@
     overflow-y: auto;
     overflow-x: hidden;
 
-    &::-webkit-scrollbar {
-      width: 3.5px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: color.$color-loader-primary;
-      opacity: 0.5;
-      border-radius: 24px;
-      margin-block: 20px;
-    }
-
-    &::-webkit-scrollbar-track {
-      margin-block: 20px;
-    }
+    @include modalCustomScrollBar;
   }
 
   &Header {
@@ -98,27 +85,11 @@
   }
 
   &Textarea {
-    width: 100%;
-    border: 2.5px solid color.$background-modal-light;
-    box-shadow: color.$shadow-modal;
-    background: color.$color-white-primary;
-    border-radius: 14px;
-    min-height: 120px;
-    padding: 11px;
-    color: color.$color-gray-neutral;
-    caret-color: color.$color-gray-neutral;
-    resize: none;
-    @include inputHover;
-    &::placeholder {
-      @include selectLabel;
-      font-weight: 400;
-    }
+    @include customTextarea;
   }
 
   &TextareaLabel {
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 7px;
+    @include flexColumn(7px);
     margin-block-start: 40px;
     @include selectLabel;
   }
@@ -135,10 +106,8 @@
   }
 
   &SelectLabel {
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 7px;
     margin-block-start: 32px;
+    @include flexColumn(7px);
     @include selectLabel;
   }
 }
