--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -405,3 +405,9 @@
     font-weight: 400;
   }
 }
+
+@mixin flexBasicColumn($gap: $gap) {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: $gap;
+}
