--- a/src/components/home/DashboardPanel/DashboardPanel.module.scss
+++ b/src/components/home/DashboardPanel/DashboardPanel.module.scss
@@ -30,12 +30,12 @@
 
   &Date {
     width: 100%;
-    max-width: 250px;
+    max-width: 280px;
     min-height: 48px;
     border-radius: 14px;
     display: flex;
     align-items: center;
-    padding: 0 15px 0 16px;
+    padding: 12px 15px 12px 16px;
     gap: 14px;
     background: color.$color-gray-light;
   }
@@ -50,7 +50,7 @@
     width: 100%;
     max-width: 211px;
     color: color.$color-black-deep;
-    font-weight: 600;
+    font-size: size.$font-size-lg;
     line-height: 150%;
   }
 }
