--- a/src/components/home/NearestEvents/NearestEvents.module.scss
+++ b/src/components/home/NearestEvents/NearestEvents.module.scss
@@ -4,7 +4,7 @@
 
 .nearestEvents {
   @include whiteContainer(339px);
-  height: 470px;
+  height: 29.375rem;
 
   &Container {
     @include containerPadding;
