--- a/src/components/auth/ServiceDetails/ServiceDetails.module.scss
+++ b/src/components/auth/ServiceDetails/ServiceDetails.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
     min-height: 100%;
   }
 
@@ -19,8 +19,8 @@
     display: flex;
     align-items: center;
     flex-flow: column nowrap;
-    gap: 6px;
-    padding-block-start: 75px;
+    gap: 0.375rem;
+    padding-block-start: 4.6875rem;
   }
 
   & .stepFormHeader > .stepFormHeaderStepsFigures {
@@ -37,8 +37,8 @@
     flex-direction: column;
     align-items: center;
     flex: 1 1 auto;
-    gap: 19px;
-    padding-bottom: 30px;
+    gap: 1.1875rem;
+    padding-bottom: 1.875rem;
   }
 
   & .serviceDetailsForm {
@@ -52,11 +52,11 @@
 
   & .serviceDetailsInputContainer {
     width: 100%;
-    max-width: 403px;
-    min-height: 102px;
+    max-width: 25.1875rem;
+    min-height: 6.375rem;
     display: flex;
     flex-flow: column nowrap;
-    gap: 7px;
+    gap: 0.4375rem;
   }
 
   & .serviceDetailsLabel {
@@ -72,21 +72,21 @@
   & .businessDirectionLabel {
     @include label;
     @include selectLabel;
-    min-height: 102px;
+    min-height: 6.375rem;
   }
 
   & .serviceDetailsButtons {
     width: 100%;
-    max-width: 403px;
+    max-width: 25.1875rem;
     display: flex;
     flex-flow: column nowrap;
-    gap: 7px;
+    gap: 0.4375rem;
   }
 
   & .serviceDetailsButtonsContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 16px;
+    gap: 1rem;
   }
 
   & .serviceDetailsButton {
@@ -94,6 +94,7 @@
     @include selectLabel;
     font-weight: 400;
   }
+
   & .activeButton {
     background: color.$background-support-primary;
     color: color.$color-white-primary;
@@ -102,18 +103,18 @@
 
   & .multiStepsFooter {
     width: 100%;
-    height: 88px;
+    height: 5.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-inline: 41px;
-    border-top: 1.5px solid color.$border-light;
+    padding-inline: 2.5625rem;
+    border-top: 0.09375rem solid color.$border-light;
   }
 
   & .multiStepsNextButton {
     @include Button;
     position: static;
-    max-width: 145px;
+    max-width: 9.0625rem;
 
     &:disabled {
       @include disabledButton;
@@ -123,14 +124,14 @@
   & .multiStepsPreviousButton {
     background: inherit;
     width: 100%;
-    max-width: 132px;
-    min-height: 48px;
+    max-width: 8.25rem;
+    min-height: 3rem;
     color: color.$background-support-primary;
     font-weight: 600;
     font-size: size.$font-size-md;
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 0.5rem;
     &:disabled {
       @include disabledButton;
     }
