--- a/src/components/auth/ServiceSelection/ServiceSelection.module.scss
+++ b/src/components/auth/ServiceSelection/ServiceSelection.module.scss
@@ -11,7 +11,7 @@
     flex-flow: column nowrap;
     align-items: center;
     width: 100%;
-    padding-block-start: 75px;
+    padding-block-start: 4.6875rem;
     @include whiteContainer(100%);
   }
 
@@ -19,10 +19,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
     width: 100%;
     height: 100%;
-    padding-block-start: 30px;
+    padding-block-start: 1.875rem;
     flex: 1 1 auto;
 
     &Header {
@@ -30,7 +30,7 @@
       display: flex;
       align-items: center;
       flex-flow: column nowrap;
-      gap: 6px;
+      gap: 0.375rem;
     }
 
     &Header > .stepFormHeaderStepsFigures {
@@ -44,9 +44,9 @@
 
   & .servicesLabel {
     width: 100%;
-    max-width: 403px;
+    max-width: 25.1875rem;
     display: flex;
-    gap: 7px;
+    gap: 0.4375rem;
     flex-direction: column;
     @include selectLabel;
   }
@@ -58,18 +58,18 @@
 
   & .multiStepsFooter {
     width: 100%;
-    height: 88px;
+    height: 5.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-inline: 41px;
-    border-top: 1.5px solid color.$border-light;
+    padding-inline: 2.5625rem;
+    border-top: 0.09375rem solid color.$border-light;
   }
 
   & .multiStepsNextButton {
     @include Button;
     position: static;
-    max-width: 145px;
+    max-width: 9.0625rem;
 
     &:disabled {
       @include disabledButton;
@@ -79,14 +79,14 @@
   & .multiStepsPreviousButton {
     background: inherit;
     width: 100%;
-    max-width: 132px;
-    min-height: 48px;
+    max-width: 8.25rem;
+    min-height: 3rem;
     color: color.$background-support-primary;
     font-weight: 600;
     font-size: size.$font-size-md;
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 0.5rem;
     &:disabled {
       @include disabledButton;
     }
