--- a/src/components/auth/UserDetails/UserDetails.module.scss
+++ b/src/components/auth/UserDetails/UserDetails.module.scss
@@ -9,7 +9,7 @@
   &Container {
     display: flex;
     flex-flow: column nowrap;
-    gap: 30px;
+    gap: 1.875rem;
     width: 100%;
     @include whiteContainer(100%);
   }
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
     width: 100%;
     flex: 1 1 auto;
   }
@@ -28,8 +28,8 @@
     display: flex;
     align-items: center;
     flex-flow: column nowrap;
-    gap: 6px;
-    padding-block-start: 75px;
+    gap: 0.375rem;
+    padding-block-start: 4.6875rem;
   }
 
   & .stepFormHeader > .stepFormHeaderStepsFigures {
@@ -42,7 +42,7 @@
 
   & .signInFormBlockInputContainer {
     @include label;
-    height: 98px;
+    height: 6.125rem;
     position: relative;
   }
 
@@ -53,13 +53,13 @@
   }
 
   & .signInFormBlockPhoneInputContainer {
-    max-width: 225px;
+    max-width: 14.0625rem;
   }
 
   & .signInFormBlockViewIcon {
     position: absolute;
-    bottom: 31px;
-    right: 18px;
+    bottom: 1.9375rem;
+    right: 1.125rem;
     cursor: pointer;
   }
 
@@ -71,14 +71,14 @@
     width: 100%;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.625rem;
     flex-direction: column;
   }
 
   & .sendCodeButton {
     @include Button;
     position: static;
-    max-width: 200px;
+    max-width: 12.5rem;
     &:disabled {
       @include disabledButton;
     }
@@ -86,11 +86,11 @@
 
   & .stepFormSubmittedMessageBlock {
     display: flex;
-    padding: 20px;
+    padding: 1.25rem;
     width: 100%;
-    max-width: 445px;
-    height: 88px;
-    border-radius: 14px;
+    max-width: 27.875rem;
+    height: 5.5rem;
+    border-radius: 0.875rem;
     background: color.$background-main-light;
   }
 
@@ -98,15 +98,15 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    gap: 16px;
-    padding-block-start: 16px;
+    gap: 1rem;
+    padding-block-start: 1rem;
   }
 
   & .multiMessageLabelContainer {
     display: flex;
     flex-flow: column nowrap;
-    gap: 6px;
-    height: 102px;
+    gap: 0.375rem;
+    height: 6.375rem;
   }
 
   & .multiMessageLabel {
@@ -116,13 +116,13 @@
   & .multiMessageButtonsContainer {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 1rem;
   }
 
   & .stepFormSubmittedMessage {
     @include sentMessageTitle;
     display: flex;
-    gap: 10px;
+    gap: 0.625rem;
   }
 
   & .stepFormMain {
@@ -132,18 +132,18 @@
 
   & .multiStepsFooter {
     width: 100%;
-    height: 88px;
+    height: 5.5rem;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding-inline: 41px;
+    padding-inline: 2.5625rem;
     border-top: 1.5px solid color.$border-light;
   }
 
   & .multiStepsNextButton {
     @include Button;
     position: static;
-    max-width: 145px;
+    max-width: 9.0625rem;
 
     &:disabled {
       @include disabledButton;
@@ -157,7 +157,7 @@
     font-size: size.$font-size-lg;
     text-align: center;
     @include inputHover;
-    border-width: 2px;
+    border-width: 0.125rem;
   }
 
   & .phoneInputContainer {
@@ -165,6 +165,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 403px;
+    max-width: 25.375rem;
   }
 }
