--- a/src/components/containers/BodyWrapper/BodyWrapper.module.scss
+++ b/src/components/containers/BodyWrapper/BodyWrapper.module.scss
@@ -3,10 +3,10 @@
 
 .bodyWrapper {
   display: flex;
-  gap: 30px;
+  gap: 1.875rem;
   width: 100%;
   @include BoundingBox;
   background: color.$background-main-light;
-  padding: 20px 20px 25px 20px;
+  padding: 1.25rem 1.25rem 1.5625rem 1.25rem;
   min-height: 100vh;
 }
