--- a/src/components/home/DashboardPanel/DashboardPanel.module.scss
+++ b/src/components/home/DashboardPanel/DashboardPanel.module.scss
@@ -13,42 +13,42 @@
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
-    gap: 10px;
+    gap: 0.625rem;
   }
 
   &GreetTitle {
     @include listItem;
     font-weight: 400;
-    line-height: 22px;
-    min-height: 22px;
+    line-height: 1.375rem;
+    min-height: 1.375rem;
   }
 
   &Title {
-    line-height: 48px;
-    @include title(48px);
+    line-height: 3rem;
+    @include title(3rem);
   }
 
   &Date {
     width: 100%;
-    max-width: 280px;
-    min-height: 48px;
-    border-radius: 14px;
+    max-width: 17.5rem;
+    min-height: 3rem;
+    border-radius: 0.875rem;
     display: flex;
     align-items: center;
-    padding: 12px 15px 12px 16px;
-    gap: 14px;
+    padding: 0.75rem 0.9375rem 0.75rem 1rem;
+    gap: 0.875rem;
     background: color.$color-gray-light;
   }
 
   &CalendarIcon {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
     object-fit: cover;
   }
 
   &DateTitle {
     width: 100%;
-    max-width: 211px;
+    max-width: 13.1875rem;
     color: color.$color-black-deep;
     font-size: size.$font-size-lg;
     line-height: 150%;
