--- a/src/components/home/HomeModal/HomeModal.module.scss
+++ b/src/components/home/HomeModal/HomeModal.module.scss
@@ -13,19 +13,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 67px;
-  padding-bottom: 107px;
+  padding-top: 4.1875rem;
+  padding-bottom: 6.6875rem;
   z-index: 100;
 
   &Container {
     display: flex;
     flex-direction: column;
     @include whiteContainer(100%);
-    max-width: 584px;
+    max-width: 36.5rem;
     margin-top: auto;
-    max-height: 824px;
+    max-height: 51.5rem;
     margin-bottom: auto;
-    padding: 30px 60px;
+    padding: 1.875rem 3.75rem;
     box-sizing: border-box;
     overflow-y: auto;
     overflow-x: hidden;
@@ -37,7 +37,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    height: 59px;
+    height: 3.6875rem;
     position: relative;
   }
 
@@ -49,7 +49,7 @@
     @include closeButton;
     position: absolute;
     top: 0;
-    right: -30px;
+    right: -1.875rem;
     transition: 0.3s ease-in-out 0s;
 
     &:hover {
@@ -60,13 +60,13 @@
   &CloseIcon {
     width: 100%;
     height: 100%;
-    max-width: 24px;
-    max-height: 24px;
+    max-width: 1.5rem;
+    max-height: 1.5rem;
   }
 
   &BannerImage {
     width: 100%;
-    margin-block-start: 20px;
+    margin-block-start: 1.25rem;
     aspect-ratio: 16 / 9;
     object-fit: contain;
   }
@@ -76,8 +76,8 @@
     line-height: 150%;
     font-weight: 400;
     width: 100%;
-    max-width: 435px;
-    margin-top: 30px;
+    max-width: 27.1875rem;
+    margin-top: 1.875rem;
   }
 
   & .modalSelect {
@@ -89,15 +89,15 @@
   }
 
   &TextareaLabel {
-    @include flexColumn(7px);
-    margin-block-start: 40px;
+    @include flexColumn(0.4375rem);
+    margin-block-start: 2.5rem;
     @include selectLabel;
   }
 
   &SendButton {
     @include Button;
     position: static;
-    margin-block-start: 51px;
+    margin-block-start: 3.1875rem;
     margin-left: auto;
 
     &:disabled {
@@ -106,14 +106,14 @@
   }
 
   &SelectLabel {
-    margin-block-start: 32px;
-    @include flexColumn(7px);
+    margin-block-start: 2rem;
+    @include flexColumn(0.4375rem);
     @include selectLabel;
   }
 }
 
 @include respond-toHeight(height-medium) {
   .modal {
-    padding: 40px;
+    padding: 2.5rem;
   }
 }
