--- a/src/components/home/NavView/NavView.module.scss
+++ b/src/components/home/NavView/NavView.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 34px;
+  min-height: 2.125rem;
 
   & .NavViewTitle {
     @include boldTitle;
