--- a/src/components/home/Projects/Projects.module.scss
+++ b/src/components/home/Projects/Projects.module.scss
@@ -4,23 +4,23 @@
 
 .projects {
   width: 100%;
-  max-width: 781px;
+  max-width: 48.8125rem;
 
   &Container {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
   }
 
   &Items {
     display: flex;
     flex-direction: column;
-    gap: 21px;
+    gap: 1.3125rem;
   }
 
   &Item {
     @include whiteContainer(100%);
-    min-height: 148px;
+    min-height: 9.25rem;
   }
 }
