--- a/src/components/home/Workload/Workload.module.scss
+++ b/src/components/home/Workload/Workload.module.scss
@@ -3,8 +3,8 @@
 @use '../../../styles/base/globals/globals' as size;
 
 .workload {
-  @include whiteContainer(781px);
-  height: 470px;
+  @include whiteContainer(48.8125rem);
+  height: 29.375rem;
 
   &Container {
     @include containerPadding;
