--- a/src/components/projects/ProjectsSidebar/ProjectsSidebar.module.scss
+++ b/src/components/projects/ProjectsSidebar/ProjectsSidebar.module.scss
@@ -12,7 +12,7 @@
   }
 
   &Select {
-    padding: 26px 24px;
-    border-bottom: 1.5px solid color.$border-light;
+    padding: 1.625rem 1.5rem;
+    border-bottom: 0.09375rem solid color.$border-light;
   }
 }
