--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -3,7 +3,7 @@
 
 @mixin BoundingBox {
   width: 100%;
-  max-width: 1440px;
+  max-width: 90rem;
   margin: 0 auto;
 }
 
@@ -17,18 +17,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 0.5rem;
   width: 100%;
-  max-width: 129px;
-  min-height: 48px;
+  max-width: 8.0625rem;
+  min-height: 3rem;
   position: absolute;
-  bottom: 26px;
-  left: 19px;
+  bottom: 1.625rem;
+  left: 1.1875rem;
   background: color.$background-support-primary;
   box-shadow: color.$shadow-box-support;
   font-size: size.$font-size-lg;
   color: color.$color-white-primary;
-  border-radius: 14px;
+  border-radius: 0.875rem;
   font-weight: 700;
 
   transition: background 0.5s ease-in-out 0s;
@@ -49,9 +49,9 @@
 }
 
 @mixin menuButton {
-  width: 48px;
-  height: 48px;
-  border-radius: 14px;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.875rem;
   background: color.$color-white-primary;
   box-shadow: color.$shadow-box-light;
   display: flex;
@@ -72,11 +72,11 @@
   max-width: $max-width;
   background: color.$color-white-primary;
   box-shadow: color.$shadow-box-light;
-  border-radius: 24px;
+  border-radius: 1.5rem;
 }
 
 @mixin containerPadding {
-  padding: 28px 20px 16px 30px;
+  padding: 1.75rem 1.125rem 1rem 1.875rem;
 }
 
 @mixin boldTitle {
@@ -88,7 +88,7 @@
 @mixin viewLink {
   display: flex;
   align-items: center;
-  gap: 2px;
+  gap: 0.125rem;
   font-size: size.$font-size-lg;
   color: color.$background-support-primary;
   font-weight: 600;
@@ -108,9 +108,9 @@
     bottom: -2px;
     left: 50%;
     width: 0;
-    height: 2px;
+    height: 0.125rem;
     background: color.$background-support-primary;
-    border-radius: 1px;
+    border-radius: 0.0625rem;
     transition:
       width 0.5s ease-in-out,
       left 0.5s ease-in-out;
@@ -124,12 +124,12 @@
 }
 
 @mixin closeButton {
-  width: 44px;
-  height: 44px;
+  width: 2.75rem;
+  height: 2.75rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 14px;
+  border-radius: 0.875rem;
   background: color.$background-main-light;
 }
 
@@ -142,14 +142,14 @@
 
 @mixin select {
   width: 100%;
-  max-width: 464px;
-  border-radius: 19px;
-  min-height: 49px;
-  border: 1.5px solid color.$background-modal-light;
+  max-width: 29rem;
+  border-radius: 1.1875rem;
+  min-height: 3.0625rem;
+  border: 0.09375rem solid color.$background-modal-light;
   box-shadow: color.$shadow-modal;
   background: color.$color-white-primary;
   margin: 0;
-  padding-inline-start: 18px;
+  padding-inline-start: 1.125rem;
   appearance: none;
   @include selectLabel;
   font-weight: 400;
@@ -162,7 +162,7 @@
   }
   &:focus {
     border-color: color.$background-support-hover;
-    outline: 3px solid rgba(color.$background-support-primary, 0.12);
+    outline: 0.1875rem solid rgba(color.$background-support-primary, 0.12);
   }
 }
 
@@ -183,21 +183,21 @@
 
 @mixin label {
   width: 100%;
-  max-width: 403px;
+  max-width: 25.1875rem;
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 0.4375rem;
 }
 
 @mixin input {
   width: 100%;
-  max-width: 403px;
-  border-radius: 14px;
-  border: 2px solid color.$background-modal-light;
+  max-width: 25.1875rem;
+  border-radius: 0.875rem;
+  border: 0.125rem solid color.$background-modal-light;
   background: color.$color-white-primary;
   box-shadow: color.$shadow-modal;
-  height: 48px;
-  padding-inline: 18px;
+  height: 3rem;
+  padding-inline: 1.125rem;
   color: color.$color-gray-neutral;
   caret-color: color.$color-gray-light;
   font-size: size.$font-size-md;
@@ -213,8 +213,8 @@
   appearance: none;
   width: $width;
   height: $width;
-  border: 2.3px solid color.$color-black-deep;
-  border-radius: 4px;
+  border: 0.14375rem solid color.$color-black-deep;
+  border-radius: 0.25rem;
   outline: none;
   cursor: pointer;
   position: relative;
@@ -242,9 +242,9 @@
 
 @mixin confirmationButton {
   width: 100%;
-  max-width: 58px;
-  height: 49px;
-  border-radius: 14px;
+  max-width: 3.625rem;
+  height: 3.0625rem;
+  border-radius: 0.875rem;
   border: 1px solid color.$background-modal-light;
   box-shadow: color.$shadow-modal;
   background: color.$color-white-primary;
@@ -252,21 +252,21 @@
 
 @mixin serviceDetailButton {
   border: 2px solid color.$background-modal-light;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   width: 100%;
-  max-width: 89px;
-  min-height: 48px;
+  max-width: 5.5625rem;
+  min-height: 3rem;
   background: color.$color-white-primary;
   box-shadow: color.$shadow-box-light;
 }
 
 @mixin updatedContainer {
   width: 100%;
-  max-width: 291px;
-  min-height: 78px;
-  border-radius: 14px;
+  max-width: 18.1875rem;
+  min-height: 4.875rem;
+  border-radius: 0.875rem;
   background: color.$background-main-light;
-  padding: 15px 20px;
+  padding: 0.9375rem 1.25rem;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -274,7 +274,7 @@
 
 @mixin updatedTitle {
   width: 100%;
-  max-width: 200px;
+  max-width: 12.5rem;
   line-height: 150%;
   color: color.$color-black-deep;
 }
@@ -289,17 +289,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 14px;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.875rem;
   background: color.$background-main-light;
 }
 
 @mixin sidebar {
   width: 100%;
   min-height: 100vh;
-  max-width: 265px;
-  border-radius: 24px;
+  max-width: 16.5625rem;
+  border-radius: 1.5rem;
   background: color.$color-white-primary;
   box-shadow: color.$shadow-box-light;
 }
@@ -316,9 +316,9 @@
 }
 
 @mixin tasksNavButton {
-  width: 48px;
-  height: 48px;
-  border-radius: 14px;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.875rem;
   background: color.$color-white-primary;
   box-shadow: color.$shadow-box-light;
 }
@@ -353,7 +353,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 14px;
+  border-radius: 0.875rem;
   background: color.$color-gray-light;
   font-weight: 700;
   color: color.$color-black-deep;
@@ -373,29 +373,29 @@
 
 @mixin modalCustomScrollBar {
   &::-webkit-scrollbar {
-    width: 3.5px;
+    width: 0.21875rem;
   }
 
   &::-webkit-scrollbar-thumb {
     background: color.$color-loader-primary;
     opacity: 0.5;
-    border-radius: 24px;
-    margin-block: 20px;
+    border-radius: 1.5rem;
+    margin-block: 1.25rem;
   }
 
   &::-webkit-scrollbar-track {
-    margin-block: 20px;
+    margin-block: 1.25rem;
   }
 }
 
 @mixin customTextarea {
   width: 100%;
-  border: 2.5px solid color.$background-modal-light;
+  border: 0.15625rem solid color.$background-modal-light;
   box-shadow: color.$shadow-modal;
   background: color.$color-white-primary;
-  border-radius: 14px;
-  min-height: 120px;
-  padding: 11px;
+  border-radius: 0.875rem;
+  min-height: 7.5rem;
+  padding: 0.6875rem;
   color: color.$color-gray-neutral;
   caret-color: color.$color-gray-neutral;
   resize: none;
