--- a/src/styles/base/globals/_globals.scss
+++ b/src/styles/base/globals/_globals.scss
@@ -1,19 +1,19 @@
-$font-size-xxs: 8px;
-$font-size-xs: 10px;
-$font-size-sm: 12px;
-$font-size-md: 14px;
-$font-size-lg: 16px;
-$font-size-xl: 18px;
-$font-size-xxl: 20px;
-$font-size-2xl: 22px;
-$font-size-xxxl: 24px;
-$font-size-3xl: 30px;
-$font-size-4xl: 32px;
-$font-size-4xxl: 36px;
-$font-size-5xl: 40px;
-$font-size-6xl: 48px;
-$font-size-6xxl: 54px;
-$font-size-7xl: 56px;
-$font-size-8xl: 64px;
-$font-size-9xl: 72px;
-$font-size-10xl: 100px;
+$font-size-xxs: 0.5rem;
+$font-size-xs: 0.625rem;
+$font-size-sm: 0.75rem;
+$font-size-md: 0.875rem;
+$font-size-lg: 1rem;
+$font-size-xl: 1.125rem;
+$font-size-xxl: 1.25rem;
+$font-size-2xl: 1.375rem;
+$font-size-xxxl: 1.5rem;
+$font-size-3xl: 1.85rem;
+$font-size-4xl: 2rem;
+$font-size-4xxl: 2.25rem;
+$font-size-5xl: 2.5rem;
+$font-size-6xl: 3rem;
+$font-size-6xxl: 3.375rem;
+$font-size-7xl: 3.5rem;
+$font-size-8xl: 4rem;
+$font-size-9xl: 4.5rem;
+$font-size-10xl: 6.25rem;
