Added new media queries by others components

--- a/src/components/auth/SingInForm/SignInForm.module.scss
+++ b/src/components/auth/SingInForm/SignInForm.module.scss
@@ -173,6 +173,10 @@
       }
     }
   }
+
+  .signInFormBlockContainer {
+    padding-block-start: 4.0625rem;
+  }
 }
 
 @include respond-toWidth(medium) {
