--- a/src/components/auth/SignInBanner/SignInBanner.module.scss
+++ b/src/components/auth/SignInBanner/SignInBanner.module.scss
@@ -5,7 +5,6 @@
 
 .signInBanner {
   width: 100%;
-  height: 100%;
   max-width: 42.5rem;
 
   &Container {
@@ -49,6 +48,12 @@
   }
 }
 
+@include respond-toHeight(height-medium) {
+  .signInBannerContainer {
+    gap: 2rem;
+  }
+}
+
 @include respond-toWidth(large) {
   .signInBannerContainer {
     padding: 4.0625rem 5vw 4.625rem 5vw;
@@ -63,6 +68,17 @@
 
   .signInBannerTitle {
     font-size: size.$font-size-3xl;
+  }
+
+  .signInBannerSubtitle {
+    font-size: size.$font-size-4xl;
+    max-width: 20rem;
+    line-height: 120%;
+  }
+
+  .signInBannerIllustration {
+    max-width: 26rem;
+    max-height: 14rem;
   }
 }
 
