--- a/src/components/home/ActivityStream/ActivityStream.module.scss
+++ b/src/components/home/ActivityStream/ActivityStream.module.scss
@@ -7,7 +7,7 @@
   height: 33.75rem;
 
   &Container {
-    @include containerPadding;
+    padding: 1.75rem 1.5rem;
     @include flexBasicColumn(1rem);
   }
 
