--- a/src/components/info-portal/InfoPortalMain/InfoPortalMain.module.scss
+++ b/src/components/info-portal/InfoPortalMain/InfoPortalMain.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/abstracts/mixins/mixins' as *;
+@use '../../../styles/abstracts/breakpoints/breakpoints' as *;
 @use '../../../styles/base/colors/colors' as color;
 @use '../../../styles/base/globals/globals' as size;
 
@@ -44,7 +45,7 @@
     gap: 1rem;
     width: 100%;
     max-width: 22.5rem;
-    margin: 2.75rem 0 0 2.75rem;
+    padding: 2.75rem 0 0 2.75rem;
   }
 
   &BannerTitle {
@@ -134,6 +135,59 @@
     &Subtitle {
       color: color.$color-gray-neutral;
       font-size: size.$font-size-md;
+    }
+  }
+}
+
+@include respond-toWidth(large) {
+  .infoPortalMain {
+    &Banner {
+      &::after {
+        right: 1rem;
+        max-width: 14.1875rem;
+      }
+      &Info {
+        max-width: 20.5rem;
+        padding-inline-start: 1.75rem;
+      }
+    }
+
+    &SecondBanner {
+      max-width: 12.5625rem;
+
+      &Container {
+        padding: 1.5rem 1rem;
+      }
+    }
+  }
+}
+
+@include respond-toWidth(large-medium) {
+  .infoPortalMain {
+    .infoPortalList {
+      gap: 1rem;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      &Info {
+        gap: 1.5rem;
+      }
+
+      &Item {
+        max-width: 100%;
+        cursor: pointer;
+        transition: transform 0.2s ease-in 0s;
+
+        &:hover {
+          transform: scale(1.03);
+        }
+      }
+    }
+  }
+
+  .projectsStatistic {
+    &::after {
+      max-width: 5.2625rem;
     }
   }
 }
