--- a/src/components/layout/Sidebar/Sidebar.module.scss
+++ b/src/components/layout/Sidebar/Sidebar.module.scss
@@ -20,8 +20,7 @@
 
   &Logo {
     max-width: 3.4375rem;
-    padding-block-start: 2.5rem;
-    padding-inline-start: 1.5rem;
+    padding: 2.5rem 0 0 1.5rem;
     transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
     &:hover {
       transform: scale(1.05);
@@ -62,7 +61,7 @@
     flex-direction: column;
     gap: 3.1875rem;
     padding-inline: 1rem;
-    padding-block-end: 1.5625rem;
+    padding-block-end: 3.1875rem;
   }
 
   &LogoutBlock {
