--- a/src/components/projects/ProjectsSidebarNav/ProjectsSidebarNav.module.scss
+++ b/src/components/projects/ProjectsSidebarNav/ProjectsSidebarNav.module.scss
@@ -16,8 +16,8 @@
       gap: 0.25rem;
       min-height: 2.5rem;
       @include listItemTitle;
-      margin-inline: 1.5rem;
-      margin-block: 0.5rem 1rem;
+      padding-inline: 1.5rem;
+      padding-block: 0.5rem 1rem;
       cursor: pointer;
     }
 
